syntax = "proto3";

package koindomain;

import "koinos/options.proto"; 

/* 
  @description Authorize the mint of a name
  @read-only false
*/
message authorize_mint_arguments {
  string name = 1;
  string domain = 2;
  uint32 duration_increments = 3;
  bytes owner = 4 [(koinos.btype) = ADDRESS];
  bytes payment_from = 5 [(koinos.btype) = ADDRESS];
  bytes payment_token_address = 6 [(koinos.btype) = CONTRACT_ID];
}

message authorize_mint_result {
  uint64 expiration = 1;
  uint64 grace_period_end = 2;
}
